06-29-2025 ... 0.0.1.1 ... 960 Support
06-30-2025 ... 0.1.0.0 ... Basic A/B Search (Unverified)
07-01-2025 ... 0.1.1.0 ... PV Table
07-01-2025 ... 0.1.2.0 ... Iterative Deepening, Time Management
07-01-2025 ... 0.1.2.1 ... Bench
07-02-2025 ... 0.2.0.0 ... MVV-LVA Move Ordering ................ (248.9 +/- 68.2), (8 + 0.08), (SPRT, 122), (Local)
07-03-2025 ... 0.3.0.0 ... Quiescent Search ..................... (248.0 +/- 67.6), (8 + 0.08), (SPRT, 137), (Local)
07-04-2025 ... 0.3.1.0 ... Principal Variation Search ........... (50.1 +/- 24.4) , (8 + 0.08), (SPRT, 642), (Local)
07-05-2025 ... 0.3.1.1 ... Makefile Workaround
07-08-2025 ... 0.3.1.2 ... Refactors and Cleanups; Prepare for TT and Multithread
07-10-2025 ... 0.3.1.3 ... Added Minimal UCI Option, Prevents timeouts in low tc and limited threads
07-19-2025 ... 0.4.0.0 ... Transposition Table (Cutoffs) ........ (51.9 +/- 24.9) , (8 + 0.08), (SPRT, 636), (Local)
07-19-2025 ... 0.4.1.0 ... TT Move .............................. (92.4 +/- 34.5) , (8 + 0.08), (SPRT, 331), (Local)
07-19-2025 ... 0.4.1.1 ... Fix TT Resize UCI and Adjust Bench
08-02-2025 ... 0.4.1.2 ... Add Non-Functional Changes from Multithread2
08-02-2025 ... 0.5.0.0 ... Quiet History ........................ (39.9 +/- 19.9) , (8 + 0.08), (SPRT, 936), (https://sscg13.pythonanywhere.com/test/651/)
08-02-2025 ... 0.5.1.0 ... Fix TT Score Casting ................. (71.8 +/- 26.1) , (8 + 0.08), (SPRT, 422), (https://sscg13.pythonanywhere.com/test/652/)
08-02-2025 ... 0.5.2.0 ... Pass isPV Correctly in PVS ........... (46.4 +/- 21.1) , (8 + 0.08), (SPRT, 784), (https://sscg13.pythonanywhere.com/test/653/)
08-02-2025 ... 0.6.0.0 ... Reverse Futility Pruning ............. (177.7 +/- 47.7), (8 + 0.08), (SPRT, 242), (https://sscg13.pythonanywhere.com/test/654/)
08-02-2025 ... 0.6.1.0 ... Null Move Pruning .................... (54.9 +/- 23.7) , (8 + 0.08), (SPRT, 606), (https://sscg13.pythonanywhere.com/test/659/)